# another-mini-macro-abm

./: .clinerules  .gitignore  README.md  pyproject.toml  requirements.md  thesis_outline.md
debug_scripts/: debug_agent_factory.py  debug_data_collector.py  debug_registry.py  fix_data_decorator.py
memory_bank/: agent_factory_documentation.md  registry_documentation.md
src/mini_macro_abm/core/: controller.py  data_collector.py  registry.py
src/mini_macro_abm/core/agent_factory/: base_agent.py  factory.py
src/mini_macro_abm/core/agent_utils/: stock_matrix.py
src/mini_macro_abm/core/factory/: component_factory.py
src/mini_macro_abm/core/sim_engine/: engine.py
src/models/more_complex_model/agents/basic_household/: household.py
src/models/more_complex_model/agents/basic_household/mixins/: budget.py  employment_seeking.py  market_interactions.py
src/models/more_complex_model/agents/basic_producer/: producer.py
src/models/more_complex_model/agents/basic_producer/mixins/: manage_workforce.py  produce.py
src/models/more_complex_model/markets/: basic_market.py  goods_market.py  labor_market.py
src/models/simple_model/: model_config.yaml  run_config.yaml
src/models/simple_model/agents/simple_agent/: simple_agent.py  simple_agent.yaml
src/models/simple_model/agents/simple_agent/mixins/: simple_mixin.py
src/simulation_runs/: more_complex_config copy.yaml  more_complex_config.yaml  run_config.yaml  simple_run_config.yaml
tests/: conftest.py  smoke_test.py  test_registry.py
