[project]
name = "mini-macro-abm"
version = "0.1.0"
description = "A minimal project"
requires-python = ">=3.11"
# Runtime deps only
dependencies = [
  "pandas",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling where your package lives (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src/mini_macro_abm"]

# Dev deps for uv: install with `uv sync` (installed by default)
[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.13",
  "mypy>=1.8",
  "black>=24.0",
  # optional: pick one—ruff can replace flake8 in most setups
  # "flake8>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
